Refactor input handling and UI updates in index.html, script.js, and styles.css. Removed unnecessary buttons, improved column removal logic, and enhanced input styling for better user experience. Updated README with new demo and repository links.

--- a/index.html
+++ b/index.html
@@ -31,18 +31,12 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Input Data</h5>
-                        <p class="text-muted mb-3">Enter your data in the grid below, paste tabular data, or upload a
+                        <p class="text-muted mb-3">Enter your data in the grid below, or upload a
                             CSV file. The first row should contain strategy names, and subsequent rows should contain
                             scores.</p>
 
                         <div class="grid-controls">
                             <div class="grid-controls-main">
-                                <button class="btn btn-outline-danger btn-sm" onclick="removeLastRow()">
-                                    <i class="bi bi-dash-lg"></i> Remove Last Row
-                                </button>
-                                <button class="btn btn-outline-danger btn-sm" onclick="removeLastColumn()">
-                                    <i class="bi bi-dash-lg"></i> Remove Last Column
-                                </button>
                                 <button class="btn btn-outline-warning btn-sm" onclick="resetGrid()">
                                     <i class="bi bi-trash"></i> Clear Grid
                                 </button>
