--- a/index.html
+++ b/index.html
@@ -9,6 +9,48 @@
     <link href="styles.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+    <style>
+        .chart-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 1rem;
+        }
+        .download-btn {
+            padding: 0.25rem 0.5rem;
+            font-size: 0.875rem;
+        }
+
+        /* Row removal hover effect */
+        .btn-remove-row {
+            opacity: 0.5;
+            transition: opacity 0.2s ease;
+        }
+
+        .btn-remove-row:hover {
+            opacity: 1;
+        }
+
+        tr:hover .btn-remove-row {
+            opacity: 1;
+        }
+
+        /* Ensure hover effect works on all rows */
+        #dataGrid tbody tr:has(.btn-remove-row:hover),
+        #dataGrid tbody tr:has(.btn-remove-row:hover) td {
+            background-color: rgba(220, 53, 69, 0.1) !important;
+        }
+
+        .btn-remove-row:hover i {
+            color: #dc3545;
+        }
+
+        /* Override any existing background colors for table rows */
+        #dataGrid tbody tr:nth-child(even),
+        #dataGrid tbody tr:nth-child(odd) {
+            background-color: transparent;
+        }
+    </style>
 </head>
 
 <body>
@@ -22,6 +64,7 @@
                     <div class="subtitle text-muted">Enter your score data in the grid below or upload a CSV file</div>
                     <div class="faculty-info text-muted" style="font-size:0.95rem;">Faculty of Electrical and Computer Engineering<br>University of Prishtina</div>
                 </div>
+              
             </div>
         </header>
 
@@ -30,6 +73,9 @@
             <div class="col-12 mb-4">
                 <div class="card">
                     <div class="card-body">
+                        <a href="https://github.com/artanvrajolli/anova" target="_blank" class="github-link text-black float-end ms-4" title="View on GitHub">
+                            <i class="bi bi-github" style="font-size: 1.5rem;"></i>
+                        </a>
                         <h5 class="card-title">Input Data</h5>
                         <p class="text-muted mb-3">Enter your data in the grid below, or upload a
                             CSV file. The first row should contain strategy names, and subsequent rows should contain
@@ -48,6 +94,9 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div id="errorAlert" class="alert alert-danger mt-3" role="alert"></div>
+
 
                         <div class="grid-input-container">
                             <div class="grid-header">
@@ -90,17 +139,18 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="grid-add-buttons">
+                            <div class="grid-add-buttons mt-2">
                                 <button class="btn btn-outline-primary btn-sm add-row-btn" onclick="addRow()">
                                     <i class="bi bi-plus-lg"></i> Add Row
                                 </button>
                             </div>
                         </div>
 
-                        <button id="analyzeBtn" class="btn btn-primary">
-                            <i class="bi bi-graph-up"></i> Analyze Data
-                        </button>
-                        <div id="errorAlert" class="alert alert-danger" role="alert"></div>
+                        <div class="text-end mt-3">
+                            <button id="analyzeBtn" class="btn btn-primary">
+                                <i class="bi bi-graph-up"></i> Analyze Data
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -111,21 +161,36 @@
                     <div class="col-lg-8">
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Score Comparison</h5>
+                                <div class="chart-header">
+                                    <h5 class="card-title mb-0">Score Comparison</h5>
+                                    <button class="btn btn-outline-primary btn-sm download-btn" onclick="downloadChart('scoreChart')">
+                                        <i class="bi bi-download"></i> Download
+                                    </button>
+                                </div>
                                 <canvas id="scoreChart"></canvas>
                             </div>
                         </div>
 
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Box Plot Analysis</h5>
+                                <div class="chart-header">
+                                    <h5 class="card-title mb-0">Box Plot Analysis</h5>
+                                    <button class="btn btn-outline-primary btn-sm download-btn" onclick="downloadChart('boxPlotChart')">
+                                        <i class="bi bi-download"></i> Download
+                                    </button>
+                                </div>
                                 <canvas id="boxPlotChart"></canvas>
                             </div>
                         </div>
 
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Score Distribution</h5>
+                                <div class="chart-header">
+                                    <h5 class="card-title mb-0">Score Distribution</h5>
+                                    <button class="btn btn-outline-primary btn-sm download-btn" onclick="downloadChart('histogramChart')">
+                                        <i class="bi bi-download"></i> Download
+                                    </button>
+                                </div>
                                 <canvas id="histogramChart"></canvas>
                             </div>
                         </div>
