--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@2.1.0/dist/chartjs-plugin-annotation.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <style>
         .chart-header {
@@ -250,7 +251,6 @@
                 </div>
             </div>
             <div id="analysisContent">
-                <!-- Analysis Content Section -->
                 <div class="row">
                     <!-- Left Column: Charts -->
                     <div class="col-lg-8">
@@ -294,7 +294,6 @@
                         <!-- Correlation Matrix -->
                         <div class="card mb-4">
                             <div class="card-body">
-                                <h5 class="card-title">Correlation Matrix</h5>
                                 <div id="correlationMatrix" class="statistics-box">
                                     <p>Paste data and click "Analyze Data" to see results.</p>
                                 </div>
